--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ubon",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Security scanner for AI-generated React/Next.js and Python apps. Catches hardcoded secrets, accessibility issues, and vulnerabilities that traditional linters miss.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -67,7 +67,8 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
-    "glob": "^10.3.10"
+    "glob": "^10.3.10",
+    "typescript": "^5.3.3"
   },
   "optionalDependencies": {
     "puppeteer": "^23.6.0"
@@ -79,8 +80,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
