chore(npm): include CHANGELOG.md in published files

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
   "files": [
     "dist",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "CHANGELOG.md"
   ],
   "dependencies": {
     "chalk": "^4.1.2",
