--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "tsc --watch",
     "start": "node dist/cli.js",
     "test": "jest",
+    "preversion": "node scripts/check-changelog.js",
     "test:watch": "jest --watch",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
