feat(vscode): run on save and basic quick fixes for A11Y001/A11Y002

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -20,6 +20,12 @@
         "title": "Ubon: Scan Workspace"
       }
     ],
+    "codeActions": [
+      {
+        "languages": ["javascript", "javascriptreact", "typescript", "typescriptreact", "vue"],
+        "kind": "quickfix"
+      }
+    ],
     "configuration": {
       "type": "object",
       "title": "Ubon",
@@ -34,6 +40,11 @@
           "default": ["check", "--json"],
           "items": { "type": "string" },
           "description": "Additional arguments passed to the ubon CLI."
+        },
+        "ubon.runOnSave": {
+          "type": "boolean",
+          "default": true,
+          "description": "Automatically run Ubon on file save."
         }
       }
     }
