--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   ],
   "dependencies": {
     "chalk": "^4.1.2",
+    "chokidar": "^3.6.0",
     "commander": "^11.1.0",
     "glob": "^10.3.10",
     "typescript": "^5.3.3"
